# Classic-Supervised-Classifiers-for-Semantic-Segmentation

./: CMakeLists.txt  README.md  classifierConf.yml  colorConf.yml  featuresConf.yml
decisionBoundaries/: CMakeLists.txt  decisionBoundaries.cpp
imgSemanticSeg/: CMakeLists.txt  imgSeg.cpp  precisionCal.cpp
libs/: CMakeLists.txt  debug.h
libs/gabor/: CMakeLists.txt  gabor_texture.cpp  gabor_texture.hpp
libs/imageFeatures/: CMakeLists.txt  filterFeature.cpp  filterFeature.hpp  gaborFeatures.cpp  gaborFeatures.hpp  glcm.cpp  glcm.hpp  glcmFeatures.cpp  glcmFeatures.hpp  imageFeatures.cpp  imageFeatures.hpp  luminanceFeatures.cpp  luminanceFeatures.hpp  multiFeatures.cpp  multiFeatures.hpp  rgbFeature.cpp  rgbFeature.hpp  rgbGaborFeature.cpp  rgbGaborFeature.hpp  rgbVegetationIndex.cpp  rgbVegetationIndex.hpp
libs/imageFeatures/vegetationIndex/: exGExRIndex.cpp  exGExRIndex.hpp  exgIndex.cpp  exgIndex.hpp  exrIndex.cpp  exrIndex.hpp  vegetationIndex.cpp  vegetationIndex.hpp
libs/mahalanobis/: CMakeLists.txt  pattern.cpp  pattern.h  polynomialMahalanobis.cpp  polynomialMahalanobis.h
libs/pixClassifiers/: CMakeLists.txt  ib2Mahala.cpp  ib2Mahala.hpp  imageMapper.cpp  imageMapper.hpp  imageSemanticSegmenter.cpp  imageSemanticSegmenter.hpp  mahalanobisClassifier.cpp  mahalanobisClassifier.hpp  mahalanobisKNN.cpp  mahalanobisKNN.hpp  pixelClassifier.cpp  pixelClassifier.hpp  pixelKMeansClusterer.cpp  pixelKMeansClusterer.hpp  pixelKNNClassifier.cpp  pixelKNNClassifier.hpp  pixelMahalanobisClassifier.cpp  pixelMahalanobisClassifier.hpp  pixelNNClassifier.cpp  pixelNNClassifier.hpp  pixelRandomForestClassifier.cpp  pixelRandomForestClassifier.hpp  pixelSVMClassifier.cpp  pixelSVMClassifier.hpp  weedMapper.cpp  weedMapper.hpp
libs/precisionMeasures/: CMakeLists.txt  imgF1Score.cpp  imgF1Score.hpp  imgIOU.cpp  imgIOU.hpp  imgSegPrecisionMeasure.cpp  imgSegPrecisionMeasure.hpp
libs/utils/: CMakeLists.txt  util.cpp  util.hpp
