set(sourcesList)
list(APPEND sourcesList imageFeatures.cpp)
list(APPEND sourcesList multiFeatures.cpp)
list(APPEND sourcesList filterFeature.cpp)
list(APPEND sourcesList rgbGaborFeature.cpp)
list(APPEND sourcesList rgbFeature.cpp)
list(APPEND sourcesList vegetationIndex/vegetationIndex.cpp)
list(APPEND sourcesList vegetationIndex/exgIndex.cpp)
list(APPEND sourcesList vegetationIndex/exrIndex.cpp)
list(APPEND sourcesList vegetationIndex/exGExRIndex.cpp)
list(APPEND sourcesList rgbVegetationIndex.cpp)
list(APPEND sourcesList gaborFeatures.cpp)
list(APPEND sourcesList luminanceFeatures.cpp)
list(APPEND sourcesList glcmFeatures.cpp)
list(APPEND sourcesList glcm.cpp)
add_library(ImageFeatures_LIBS ${sourcesList})
target_link_libraries(ImageFeatures_LIBS Gabor_LIBS)

