set(sourcesList)
list(APPEND sourcesList pixelClassifier.cpp)
list(APPEND sourcesList mahalanobisClassifier.cpp)
list(APPEND sourcesList pixelKNNClassifier.cpp)
list(APPEND sourcesList pixelKMeansClusterer.cpp)
list(APPEND sourcesList pixelMahalanobisClassifier.cpp)
list(APPEND sourcesList imageMapper.cpp)
list(APPEND sourcesList weedMapper.cpp)
list(APPEND sourcesList pixelSVMClassifier.cpp)
list(APPEND sourcesList pixelNNClassifier.cpp)
list(APPEND sourcesList pixelRandomForestClassifier.cpp)
list(APPEND sourcesList mahalanobisKNN.cpp)
list(APPEND sourcesList ib2Mahala.cpp)
add_library(Mapping_LIBS ${sourcesList})
target_link_libraries(Mapping_LIBS ${OpenCV_LIBS})
target_link_libraries(Mapping_LIBS PolyMahala_LIBS)
