set(sourcesList)
list(APPEND sourcesList pixelClassifier.cpp)
list(APPEND sourcesList mahalanobisClassifier.cpp)
list(APPEND sourcesList pixelKNNClassifier.cpp)
list(APPEND sourcesList pixelKMeansClusterer.cpp)
list(APPEND sourcesList pixelMahalanobisClassifier.cpp)
list(APPEND sourcesList imageSemanticSegmenter.cpp)
list(APPEND sourcesList pixelSVMClassifier.cpp)
list(APPEND sourcesList pixelNNClassifier.cpp)
list(APPEND sourcesList pixelRandomForestClassifier.cpp)
list(APPEND sourcesList mahalanobisKNN.cpp)
list(APPEND sourcesList ib2Mahala.cpp)
add_library(PixClassifiers_LIBS ${sourcesList})
target_link_libraries(PixClassifiers_LIBS ${OpenCV_LIBS})
target_link_libraries(PixClassifiers_LIBS PolyMahala_LIBS)
